deployment/app.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: jpbot-api
  name: jpbot-api
  namespace: default
spec:
  serviceName: "jpbot-api"
  replicas: 1
  selector:
    matchLabels:
      service: jpbot-api
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  template:
    metadata:
      labels:
        service: jpbot-api
    spec:
      containers:
        - image: maksim1111/jpbot-api:latest
          name: jpbot-api
          imagePullPolicy: IfNotPresent
          command: [ "/app/main" ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
          volumeMounts:
            - mountPath: /app/storage
              subPath: storage
              name: jpbot-api-data
            - mountPath: /app/config.yml
              name: jpbot-api-config
              subPath: config.yml
          readinessProbe:
            exec:
              command: [ "sqlite3", "/app/storage/db.sqlite", ".tables" ]
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 2
      volumes:
        - name: jpbot-api-config
          secret:
            secretName: jpbot-api-secrets
  volumeClaimTemplates:
    - metadata:
        name: jpbot-api-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: "do-block-storage"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: jpbot-api
  name: jpbot-api
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    service: jpbot-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jpbot-api
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: jpbot-api.mxksimdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jpbot-api
                port:
                  number: 8080
